[package]
name = "DeTLS"
version = "0.1.0"
edition = "2021"

[lib]
name = "detls"
path = "src/lib.rs"

[[bin]]
name = "detls"
path = "src/main.rs"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x509-cert = "0.2"
rcgen = { version = "0.12", features = ["pem"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.0"
rsa = "0.9"
aes-gcm = "0.10"
generic-array = "1.0"
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
hyper = { version = "1.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2"] }
http-body-util = "0.1"
argon2 = "0.5"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.3"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
hex = "0.4"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
pem = "3.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
